syntax = "proto3";

option optimize_for = CODE_SIZE;

message SyncRequest {
  repeated EncryptedMessage messages = 1;
  string userId = 2; // OwnerId
  string nodeId = 3; // TODO:
  string merkleTree = 4; // MerkleTreeString
}

message SyncResponse {
  repeated EncryptedMessage messages = 1;
  string merkleTree = 2; // MerkleTreeString
}

message EncryptedMessage {
  string timestamp = 1;
  bytes content = 2;
}

// TODO: Remove.
message MessageContent {
  string table = 1;
  string row = 2;
  string column = 3;
  oneof value {
    string stringValue = 4;
    int32 numberValue = 5;
    bytes bytesValue = 6;
    string jsonValue = 7; // JSON.stringify
  };
}

